# Lab1S2.2_OOP

./: .gitignore  CMakeLists.txt  main.cpp
include/: Graph.h
recourses/: draw.py
src/: Graph.cpp
